# ge_talk_2020

./: README.md  presentation.ipynb  presentation.slides.html  pyproject.toml
