[tool.poetry]
name = "ge_talk"
version = "0.1.0"
description = "Presentation for the Great Expectation Community Show and Tell #2"
authors = ["Micha Ben Achim Kunze <michabenachim.kunze@maersk.com>"]

[tool.poetry.dependencies]
python = "^3.7"
jupyter = "^1.0.0"
pandas = "^1.1.3"
pyarrow = "^2.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
